  * Don't round up for JPEG image resolution (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=28422).
  * Read the whole image @ image.jp2[0] or an individual tile @ image.jp2[1],
    image.jp2[2].
  * The -caption option no longer fails for filenames with @ prefix (reference
    https://github.com/ImageMagick/ImageMagick/issues/43).

2015-09-19  6.9.2-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-3, GIT revision 10235:c40ee57:20150919

2015-09-17  6.9.2-2 Dirk Lemstra <dirk@lem.....org>
  * Added extra checks to avoid out of bounds error when parsing the 8bim 
    profile (reference https://github.com/ImageMagick/ImageMagick/issues/31).
  * Fixed size of memory allocation in RLE coder to avoid segfault (reference
    https://github.com/ImageMagick/ImageMagick/issues/32).

2015-09-16  6.9.2-2 Cristy  <quetzlzacatenango@image...>
  * Add Bootstrap MIT license to ImageMagick web CSS and JS.
  * Use modern idiom for autoconf
    Fix a forgotten dir when regenerating html doc (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28363).
  * The -colorspace gray option no long leaves a ghostly shadow (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28350).

2015-09-14  6.9.2-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-1, GIT revision 10201:5879612:20150913.

2015-09-13  6.9.2-1 Dirk Lemstra <dirk@lem.....org>
  * Preserving image origin in TGA files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=28310).

2015-08-15  6.9.2-1 Cristy  <quetzlzacatenango@image...>
  * Support color compliance for TXT format (e.g. -define txt:compliance=css)
    (bug report from Anthony).
  * The first argument of a hsl() color is integer, not percentage (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=26072).
  * Limit -fx recursive to avoid stack overflow (reference